--- a/html101.html
+++ b/html101.html
@@ -5,6 +5,7 @@
 	<body>
 	<h1>Welcome to html page at
 	<a href="https://www.kent.edu">KSU</a> </h1>
-	<p>Please check back later</p>
+	<p>Some changes made, but we are
+	still working on it. Try back later.</p>
 	</body>
 </html>
